Pagina principal portafolio

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </script>
             </span></h3>
             
-            <p>  &emsp; &emsp;En esta pagina esta hecha por mi pasion por la ciberseguridad y la criptografía.Se podra encontrar un blog de estudio personal en el que semana a semana estare
+            <p>  &emsp; &emsp;Pagina hecha por mi pasion por la ciberseguridad y la criptografía.Se podra encontrar un blog de estudio personal 
                 mostrando mis avances para convertirme en un Arquitecto de ciberseguridad<br> <br>
                 &emsp; &emsp;Tambien se veran algunas practicas y proyectos realizadas para mostrar mis habilidades asi como para compartir
                 conocimiento con la comunidad. 
